# vllm-on-eks

./: .gitignore  IMPLEMENTATION.md  Makefile  PROJECT.md  README.md  main.tf  outputs.tf  providers.tf
apps/fastapi-gateway/: .dockerignore  Dockerfile  pyproject.toml
apps/fastapi-gateway/app/: auth.py  main.py  metrics.py  proxy.py  tenants.py
apps/fastapi-gateway/app/scheduler/: __init__.py  aimd.py  core.py  watcher.py
apps/fastapi-gateway/tests/: test_aimd_controller.py  test_auth.py  test_metrics.py  test_scheduler.py  test_tenants.py  test_worker_watcher.py
apps/fastapi-gateway/tests/integration/: test_layer2_integration.py  test_lifespan.py  test_proxy_integration.py  test_scheduler_acceptance.py
bench/: README.md  run_scenario.sh
bench/scenarios/: aimd-baseline.yaml  aimd-sustained-pressure.yaml  autoscale-demo-128.yaml  autoscale-demo.yaml  baseline.yaml  noisy-neighbor-small.yaml  noisy-neighbor.yaml  sustained-15min.yaml  tenant-a-20rps.yaml  work-conservation-priority.yaml  work-conservation.yaml
charts/fastapi-gateway/: Chart.yaml  values.yaml
config/: tenants.yaml
docs/blog/: 2026-04-26-streaming-llm-inference-on-eks.md
infra/benchmarks/: .gitignore  README.md  namespace.tf  outputs.tf  providers.tf  remote-state.tf  runner.tf  secret.tf  variables.tf  versions.tf
infra/eks-foundation/: .gitignore  README.md  eks-access.tf  eks-addons.tf  eks-cluster.tf  helm-device-plugin.tf  irsa.tf  node-group-cpu.tf  node-group-gpu.tf  outputs.tf  providers.tf  variables.tf  versions.tf  vpc.tf
infra/platform-apps/: README.md  amp.tf  ecr.tf  (+27 more)
(+15 files in other folders)
