[project]
name = "fastapi-gateway"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<0.117",
  "uvicorn[standard]>=0.32,<0.36",
  "httpx>=0.27,<0.29",
  "prometheus-client>=0.21,<0.23",
  "pyyaml>=6,<7",
  "kubernetes-asyncio>=27,<33",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<0.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
